fix menu break on small devices

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -81,8 +81,8 @@ a:hover {
 }
 
 .custom-container {
-    padding-right: 30px;
-    padding-left: 30px;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 
 @media (min-width: 576px) {
